--- a/app/src/main/res/layout/item_games.xml
+++ b/app/src/main/res/layout/item_games.xml
@@ -40,20 +40,36 @@
                     android:layout_marginRight="10dp"
                     android:text="Nama Game"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/price"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/flowmenu"
+                    android:layout_alignParentEnd="true"
                     android:layout_marginTop="25dp"
                     android:layout_marginEnd="10dp"
-                    android:gravity="end"
+                    android:ellipsize="end"
                     android:text="Price"
-                    android:layout_below="@+id/name_game"
-                    android:textColor="@color/black"
-                    android:textSize="10sp" />
+                    android:textStyle="bold"
+                    android:textColor="@color/red"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/rp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/flowmenu"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_toStartOf="@+id/price"
+                    android:gravity="end"
+                    android:text="Rp."
+                    android:textStyle="bold"
+                    android:textColor="@color/red"
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/type_game"
@@ -62,9 +78,10 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
                     android:text="Tipe"
-                    android:layout_below="@id/price"
-                    android:textColor="@color/black"
-                    android:textSize="10sp" />
+                    android:layout_below="@id/rp"
+                    android:textStyle="bold"
+                    android:textColor="@color/purple_500"
+                    android:textSize="15sp" />
 
                 <ImageButton
                     android:id="@+id/flowmenu"
